force-app/main/default/objects/Primary_Sales_Rep__c/Primary_Sales_Rep__c.object-meta.xml
<CustomObject>
    <description>Used as the hub of all records related to a user.</description>
    <label>Primary Sales Rep</label>
    <nameField>
        <label>Primary Sales Rep Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Primary Sales Reps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>