force-app/main/default/objects/Primary_Sales_Rep__c/fields/Accounts_xref_VOS_to_EVO__c.field-meta.xml
<CustomField>
    <fullName>Accounts_xref_VOS_to_EVO__c</fullName>
    <formula>HYPERLINK(

/* If they&apos;re in Lightning */
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

/* Use Lightning syntax, optimized to avoid full page reload */
&quot;/lightning/r/Report/00O5w00000AVdF5EAL/view?fv1=&quot;,

/* Otherwise use Classic syntax */
&quot;/00O5w00000AVdF5EAL?pv1=&quot;)

/* Append the PSR Name */
&amp; Name,

/* Specify the link text */
&quot;Accounts xref VOS to EVO&quot;,

/* Keep it in the same browser tab to avoid full page reload */
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accounts xref VOS to EVO</label>
    <type>Text</type>
</CustomField>