force-app/main/default/objects/Primary_Sales_Rep__c/fields/Activities_GM_Team_Summary__c.field-meta.xml
<CustomField>
    <fullName>Activities_GM_Team_Summary__c</fullName>
    <formula>HYPERLINK(

/* If they&apos;re in Lightning */
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

/* Use Lightning syntax, optimized to avoid full page reload */
&quot;/lightning/r/Report/00Of2000005ByBe/view?fv0=&quot;,

/* Otherwise use Classic syntax */
&quot;/00Of2000005ByBe?pv0=&quot;)

/* Append the GM Email */
 &amp;   GSM_Email__c ,
 
/* Specify the link text */
&quot;Activities - Regional Sales Leader Team - Summary - Last 30 Days&quot;,

/* Keep it in the same browser tab to avoid full page reload */
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activities - GM Team - Summary</label>
    <type>Text</type>
</CustomField>