force-app/main/default/objects/Primary_Sales_Rep__c/fields/Activities_Rep__c.field-meta.xml
<CustomField>
    <fullName>Activities_Rep__c</fullName>
    <formula>HYPERLINK(

/* If they&apos;re in Lightning */
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

/* Use Lightning syntax, optimized to avoid full page reload */
&quot;/lightning/r/Report/00Of2000005ByBh/view?fv0=&quot;,

/* Otherwise use Classic syntax */
&quot;/00Of2000005ByBh?pv0=&quot;)

/* Append the PSR Name */
 &amp; Name,
 
/* Specify the link text */
&quot;Activities - Rep - Last 30 Days&quot;,

/* Keep it in the same browser tab to avoid full page reload */
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activities - Rep</label>
    <type>Text</type>
</CustomField>