force-app/main/default/objects/Primary_Sales_Rep__c/fields/Activities_SM_Team_Summary__c.field-meta.xml
<CustomField>
    <fullName>Activities_SM_Team_Summary__c</fullName>
    <formula>HYPERLINK(

/* If they&apos;re in Lightning */
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

/* Use Lightning syntax, optimized to avoid full page reload */
&quot;/lightning/r/Report/00Of2000005ByBg/view?fv0=&quot;,

/* Otherwise use Classic syntax */
&quot;/00Of2000005ByBg?pv0=&quot;)

/* Append the PSR SM Email?fv2= */
 &amp;  email_zm_sm__c    
   ,
 
/* Specify the link text */
&quot;Activities - SM Team - Summary - Last 30 Days&quot;,

/* Keep it in the same browser tab to avoid full page reload */
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activities -  SM Team - Summary</label>
    <type>Text</type>
</CustomField>