force-app/main/default/objects/Primary_Sales_Rep__c/fields/Aliases__c.field-meta.xml
<CustomField>
    <fullName>Aliases__c</fullName>
    <inlineHelpText>Used in reports on the PSR page.  The Alias should contain any and all email addresses used by this user, dropping everything after the @ sign.  Ex. Firstname.Lastname.  If more than one,  separate them with commas</inlineHelpText>
    <label>Aliases</label>
    <length>255</length>
    <type>Text</type>
</CustomField>