force-app/main/default/objects/Primary_Sales_Rep__c/fields/Analysis__c.field-meta.xml
<CustomField>
    <fullName>Analysis__c</fullName>
    <inlineHelpText>Shows Primary Sales Reps included in Metric analysis as of Aug 2009</inlineHelpText>
    <label>Analysis</label>
    <length>50</length>
    <type>Text</type>
</CustomField>