force-app/main/default/objects/Primary_Sales_Rep__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>