force-app/main/default/objects/Primary_Sales_Rep__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Primary Sales Reps</relationshipLabel>
    <relationshipName>R00N700000024sjDEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>