force-app/main/default/objects/Primary_Sales_Rep__c/fields/Contacts__c.field-meta.xml
<CustomField>
    <fullName>Contacts__c</fullName>
    <formula>HYPERLINK(

/* If they&apos;re in Lightning */
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

/* Use Lightning syntax, optimized to avoid full page reload */
&quot;/lightning/r/Report/00O5w00000AUFkeEAH/view?&amp;fv0=&quot;,

/* Otherwise use Classic syntax */
&quot;/00O5w00000AUFkeEAH?pv0=&quot;)

/* Append the PSR Name */
&amp; Name,

/* Specify the link text */
&quot;Contacts List by Rep&quot;,

/* Keep it in the same browser tab to avoid full page reload */
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contacts - List by Rep</label>
    <type>Text</type>
</CustomField>