force-app/main/default/objects/Primary_Sales_Rep__c/fields/deactivated_user__c.field-meta.xml
<CustomField>
    <fullName>deactivated_user__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this Primary Sales Rep&apos;s license has been deactivated but there IS a user record associated with the Network ID.</inlineHelpText>
    <label>Deactivated User</label>
    <type>Checkbox</type>
</CustomField>