force-app/main/default/objects/Primary_Sales_Rep__c/fields/Direct_Report_Count__c.field-meta.xml
<CustomField>
    <fullName>Direct_Report_Count__c</fullName>
    <description>Number of active Primary Sales Reps who report directly to this record.</description>
    <inlineHelpText>Number of active Primary Sales Reps who report directly to this record.</inlineHelpText>
    <label>Direct Report Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>