force-app/main/default/objects/Primary_Sales_Rep__c/fields/email_bdm_rvp__c.field-meta.xml
<CustomField>
    <fullName>email_bdm_rvp__c</fullName>
    <label>Email - BDM/RVP</label>
    <type>Email</type>
</CustomField>