force-app/main/default/objects/Primary_Sales_Rep__c/fields/email_dir__c.field-meta.xml
<CustomField>
    <fullName>email_dir__c</fullName>
    <label>Email - Level 3</label>
    <type>Email</type>
</CustomField>