force-app/main/default/objects/Primary_Sales_Rep__c/fields/email_pres__c.field-meta.xml
<CustomField>
    <fullName>email_pres__c</fullName>
    <label>Email - Sales Leader</label>
    <type>Email</type>
</CustomField>