force-app/main/default/objects/Primary_Sales_Rep__c/fields/Email_TL__c.field-meta.xml
<CustomField>
    <fullName>Email_TL__c</fullName>
    <label>Email - TL</label>
    <type>Email</type>
</CustomField>