force-app/main/default/objects/Primary_Sales_Rep__c/fields/email_vp__c.field-meta.xml
<CustomField>
    <fullName>email_vp__c</fullName>
    <label>Email - Level 1</label>
    <type>Email</type>
</CustomField>