force-app/main/default/objects/Primary_Sales_Rep__c/fields/email_zm_sm__c.field-meta.xml
<CustomField>
    <fullName>email_zm_sm__c</fullName>
    <label>Email - Level 3a</label>
    <type>Email</type>
</CustomField>