force-app/main/default/objects/Primary_Sales_Rep__c/fields/GM_Activity_Report__c.field-meta.xml
<CustomField>
    <fullName>GM_Activity_Report__c</fullName>
    <formula>HYPERLINK(

/* If they&apos;re in Lightning */
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

/* Use Lightning syntax, optimized to avoid full page reload */
&quot;#/sObject/00O39000004ptvK/view?fv0=&quot;,

/* Otherwise use Classic syntax */
&quot;/00O39000004ptvK?pv0=&quot;)

/* Append the GM created by Name */
 &amp;  CreatedBy.name_gsm__c,
 
/* Specify the link text */
&quot;View GM Team Activities&quot;,

/* Keep it in the same browser tab to avoid full page reload */
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GM Activity Report</label>
    <type>Text</type>
</CustomField>