force-app/main/default/objects/Primary_Sales_Rep__c/fields/GM_Team_Activities_Summary__c.field-meta.xml
<CustomField>
    <fullName>GM_Team_Activities_Summary__c</fullName>
    <formula>HYPERLINK(

/* If they&apos;re in Lightning */
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

/* Use Lightning syntax, optimized to avoid full page reload */
&quot;#/sObject/00O39000005coc7/view?fv0=&quot;,

/* Otherwise use Classic syntax */
&quot;/00O39000005coc7?pv0=&quot;)

/* Append the GM Name */
 &amp;  name_gsm__c,
 
/* Specify the link text */
&quot;Regional Sales Leader Team Activities - Summary&quot;,

/* Keep it in the same browser tab to avoid full page reload */
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GM Team Activities Summary</label>
    <type>Text</type>
</CustomField>