force-app/main/default/objects/Primary_Sales_Rep__c/fields/GSM_Email__c.field-meta.xml
<CustomField>
    <fullName>GSM_Email__c</fullName>
    <label>Email - Level 2</label>
    <type>Email</type>
</CustomField>