force-app/main/default/objects/Primary_Sales_Rep__c/fields/Include_in_Reporting_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Reporting_Hierarchy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a Primary Sales Rep should be included in the reporting hierarchy for Budget Allocations and Direct Report rollup- this is only necessary if they are not attached to a User record and have their User Profile field populated.</description>
    <label>Include in Reporting Hierarchy</label>
    <type>Checkbox</type>
</CustomField>