force-app/main/default/objects/Primary_Sales_Rep__c/fields/iRep_Indicator__c.field-meta.xml
<CustomField>
    <fullName>iRep_Indicator__c</fullName>
    <label>iRep Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>