force-app/main/default/objects/Primary_Sales_Rep__c/fields/iRep_Org__c.field-meta.xml
<CustomField>
    <fullName>iRep_Org__c</fullName>
    <inlineHelpText>CO = Core
MU = Manufacturing
UA = Uadvantage
FD = Food
FU = Fulfillment</inlineHelpText>
    <label>iRep Org</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>MU</fullName>
            </value>
            <value>
                <fullName>UA</fullName>
            </value>
            <value>
                <fullName>FD</fullName>
            </value>
            <value>
                <fullName>FU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>