force-app/main/default/objects/Primary_Sales_Rep__c/fields/Last_Month_s_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_s_Action_Items__c</fullName>
    <description>Loaded via a workflow from the Business Review.  Overlaid each time a new Business Review is created.  Used to pull in &quot;last monh&apos;s action items on the next Business Review created.</description>
    <label>Last Month&apos;s Action Items</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>