force-app/main/default/objects/Primary_Sales_Rep__c/fields/Last_Pipeline_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Pipeline_Review_Date__c</fullName>
    <description>This field will get updated by a process builder to track the last pipeline review the PSR has.  We&apos;ll use it as a filter on the SMs Dashboard, so they can see who hasn&apos;t had one in the last 45 days</description>
    <label>Last Pipeline Review Date</label>
    <type>Date</type>
</CustomField>