force-app/main/default/objects/Primary_Sales_Rep__c/fields/Leads_My_Teams_Active_Leads__c.field-meta.xml
<CustomField>
    <fullName>Leads_My_Teams_Active_Leads__c</fullName>
    <description>Modified 8/2 to include both parameter values. Replicates the custom link of the same name for use on the reporting tab.</description>
    <formula>HYPERLINK(

/* If they&apos;re in Lightning */
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

/* Use Lightning syntax, optimized to avoid full page reload */
&quot;/lightning/r/Report/00O5w00000AUAkyEAH/view?fv1=&quot;&amp;Name&amp;&quot;&amp;fv2=&quot;&amp;Aliases__c&amp;&quot;&amp;fv3=&quot;&amp;Aliases__c&amp;&quot;&amp;fv4=&quot;&amp;Aliases__c&amp;&quot;&amp;fv5=&quot;&amp;Aliases__c&amp;&quot;&amp;fv6=&quot;&amp;Aliases__c,

/* Otherwise use Classic syntax */
&quot;/00O5w00000AUAkyEAH?&amp;fv1=&quot;&amp;Name&amp;&quot;&amp; fv2=&quot;&amp;Aliases__c&amp;&quot;&amp;fv3=&quot;&amp;Aliases__c&amp;&quot;&amp;fv4=&quot;&amp;Aliases__c&amp;&quot;&amp;fv5=&quot;&amp;Aliases__c&amp;&quot;&amp;fv6=&quot;&amp;Aliases__c),

/* Specify the link text */
&quot;Leads by Reps&quot;,

/* Keep it in the same browser tab to avoid full page reload */
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leads - My Team&apos;s Active Leads</label>
    <type>Text</type>
</CustomField>