force-app/main/default/objects/Primary_Sales_Rep__c/fields/Legal_Contracts_report__c.field-meta.xml
<CustomField>
    <fullName>Legal_Contracts_report__c</fullName>
    <formula>HYPERLINK(

/* If they&apos;re in Lightning */
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

/* Use Lightning syntax, optimized to avoid full page reload */
&quot;/lightning/r/Report/00O5w00000AV9Y7EAL/view?fv1=&quot;&amp;Name&amp;&quot;&amp;fv2=&quot;&amp;Aliases__c&amp;&quot;&amp;fv3=&quot;&amp;Aliases__c,

/* Otherwise use Classic syntax */
&quot;/00O5w00000AV9Y7EAL?&amp;fv1=&quot;&amp;Name&amp;&quot;&amp; fv2=&quot;&amp;Aliases__c&amp;&quot;&amp;fv3=&quot;&amp;Aliases__c),

/* Specify the link text */
&quot;Legal Contracts by Rep&quot;,

/* Keep it in the same browser tab to avoid full page reload */
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Contracts report</label>
    <type>Text</type>
</CustomField>