force-app/main/default/objects/Primary_Sales_Rep__c/fields/Lightning_Primary_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Lightning_Primary_Sales_Rep__c</fullName>
    <label>Primary Sales Rep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>